--- a/web_app/templates/index.html
+++ b/web_app/templates/index.html
@@ -5,7 +5,7 @@
         <title>Metamorphic Testing</title>
         <link rel="stylesheet" href="{{ url_for('static', filename='style.css') }}">
     </head>
-    <body style="background-color: rgba(105,76,46,0.5)">
+    <body style="background-color: rgba(255,255,255,0.5)">
         <br><br>
         <div id="outer_container" style="width: 70%; margin: auto;">
             <div id="title_author" class="full_contrast" style="font-family:Verdana;text-align:left;font-color:white;padding:1em;position:relative;background:#f4f4f8;border-radius:1em;">
@@ -14,9 +14,6 @@
                     <h5 style="margin: 1.67em 0;">Tathagata Bandyopadhyay, Ting-Yu Lu, Danny Oswan, Martin Rau and Paul Schwind</h5>
                     <h6 style="margin: 2.33em 0;">Technical University of Munich, Germany</h6><hr><br>
                 </div>
-
-<!--            </div>-->
-<!--            <div id="user_input" class="hover_effect" style="font-family:Verdana;text-align:left;font-color:white;margin:1em 0;padding:1em;position:relative;background:white;border-radius:1em;">-->
                 <form action="http://127.0.0.1:5000/test" method="post">
                     <label for="modules">Choose a module to run test:</label>
                     <select id="modules" name="modules">
@@ -33,9 +30,7 @@
             </div>
             {% if report_file %}
             <div id="details_report" class="full_contrast" style="height:2000px;display:flex;font-family:Verdana;text-align:center;font-color:white;margin:1em 0;padding:1em;position:relative;background:#f4f4f8;border-radius:1em;">
-
-                <iframe src="{{ url_for('static', filename=report_file) }}" style="position: relative;display: flex;" title="test_report" width="100%" height="100%"></iframe>
-<!--                <iframe src="../../audio_gui_test_2.html" height="100%" width="100%" title="Iframe Example"></iframe>-->
+                <iframe src="{{ url_for('custom_static', filename=report_file) }}" style="position: relative;display: flex;" title="test_report" width="100%" height="100%"></iframe>
             </div>
             {% endif %}
         </div>
