changing check box name from check_box to load_previous_report, and fixing related issues

--- a/web_app/templates/index.html
+++ b/web_app/templates/index.html
@@ -39,8 +39,11 @@
                     </select><br><br>
                     <label for="report_name">Enter a report name:</label>
                     <input type="text" id="report_name" name="report_name"><br><br>
-                    <input type="checkbox" id="check_box" name="check_box" value="1">
-                    <label for="check_box">Show precomputed report</label><br><br>
+                    <input type="checkbox"
+                           id="load_previous_report"
+                           name="load_previous_report"
+                           value="1">
+                    <label for="load_previous_report">Show precomputed report</label><br><br>
                     <input type="submit"
                            id="submit"
                            value="Run Tests"
